compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__type_imported_as_value.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "import gleam/wibble.{Wibble}"
---
error: Unknown module field
  ┌─ /src/one/two.gleam:1:22
  │
1 │ import gleam/wibble.{Wibble}
  │                      ^^^^^^ Did you mean `type Wibble`?

`Wibble` is only a type, it cannot be imported as a value.
